@@ -1,7 +1,9 @@
 version 0.99.3 - XX-May-2010
  . [NEW] Animation: added 2 methods to create the Animation without delay (updated samples)
+ . [NEW] Director: added 'purgeCachedData' method
  . [FIX] ActionManager: Improved API, with better names (issue #835)
  . [FIX] Action CCCallFunc: supports class methods (issue #868)
+ . [FIX] BitmapFontAtlas: Improved loading times (issue #833)
  . [FIX] Particle: Kill the particle if timeToLive < 0 before updating it.
 
 version 0.99.3-rc - 18-May-2010
